200 OK https://www.nass.gov.ng/mp/profile/702

--- a/www.nass.gov.ng/9cb9f95b8b58299e0d288da7bd207cb97c5e8706.yml
+++ b/www.nass.gov.ng/9cb9f95b8b58299e0d288da7bd207cb97c5e8706.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:22:36 GMT
+    - Sat, 11 Aug 2018 10:09:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=e8tec%2COSyj0CB9W5Jt4np2; path=/
+    - PHPSESSID=56uygT2GSwdHN98Lv-eA40; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:22:37 GMT
+recorded_at: Sat, 11 Aug 2018 10:09:03 GMT
