--- a/www.nass.gov.ng/dfd65a9de8f195073a282af5e1ba71ab21c45e37.yml
+++ b/www.nass.gov.ng/dfd65a9de8f195073a282af5e1ba71ab21c45e37.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:27:24 GMT
+    - Sat, 11 Aug 2018 10:13:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WUKj%2CchddaLp6Kg%2CNjwZX0; path=/
+    - PHPSESSID=uyGfH0NzwNbnfvAx0xmLT2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:27:24 GMT
+recorded_at: Sat, 11 Aug 2018 10:13:57 GMT
