--- a/www.nass.gov.ng/c750ff8d209790ca0a977f34803c5f404f186741.yml
+++ b/www.nass.gov.ng/c750ff8d209790ca0a977f34803c5f404f186741.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:28:17 GMT
+    - Sat, 11 Aug 2018 10:14:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kfnYawO%2CMg2hTiR8QeY461; path=/
+    - PHPSESSID=a0ZRDwtstnJ7uJIUVNHsF1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:28:17 GMT
+recorded_at: Sat, 11 Aug 2018 10:14:56 GMT
