--- a/www.nass.gov.ng/67dd730ff856ea9bb96904fa30ee4e9ee2de60d0.yml
+++ b/www.nass.gov.ng/67dd730ff856ea9bb96904fa30ee4e9ee2de60d0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:39:22 GMT
+    - Sat, 11 Aug 2018 10:25:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GqbkteZgJD2%2CU2usx6m%2Cu0; path=/
+    - PHPSESSID=XTvd6qs4xvCW1E6f11dLX1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:39:22 GMT
+recorded_at: Sat, 11 Aug 2018 10:25:28 GMT
