--- a/www.nass.gov.ng/a411c9b3d518591f717e56ac2704d11cdea35712.yml
+++ b/www.nass.gov.ng/a411c9b3d518591f717e56ac2704d11cdea35712.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:40:37 GMT
+    - Sat, 11 Aug 2018 10:26:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3jzzqufIARag69bV5wIZq3; path=/
+    - PHPSESSID=6aksEmw14lF%2CIZ8ZJnpsz1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:40:37 GMT
+recorded_at: Sat, 11 Aug 2018 10:26:24 GMT
