--- a/www.nass.gov.ng/e35050c66243b61eb8173ffb969fa3d5d88cc9c9.yml
+++ b/www.nass.gov.ng/e35050c66243b61eb8173ffb969fa3d5d88cc9c9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:42:35 GMT
+    - Sat, 11 Aug 2018 10:28:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fmnYncov8ERETORjKiQ7-0; path=/
+    - PHPSESSID=7HLx1iRyePEGx%2CL7PCh9y0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:42:35 GMT
+recorded_at: Sat, 11 Aug 2018 10:28:01 GMT
