--- a/www.nass.gov.ng/dd0f99483051557e277f98b4a825665c27ed33d6.yml
+++ b/www.nass.gov.ng/dd0f99483051557e277f98b4a825665c27ed33d6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 22:03:18 GMT
+    - Sat, 11 Aug 2018 10:50:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EZ0d6xwUmd1XY3PcO%2CHuQ2; path=/
+    - PHPSESSID=KPA2lHGe3-W0qwDiHWOh-3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 22:03:18 GMT
+recorded_at: Sat, 11 Aug 2018 10:50:34 GMT
