--- a/www.nass.gov.ng/100f7c561771380aac5a986d9aeba0c830f8bc1d.yml
+++ b/www.nass.gov.ng/100f7c561771380aac5a986d9aeba0c830f8bc1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 22:09:37 GMT
+    - Sat, 11 Aug 2018 10:56:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=A6pda%2Cb4UJ-AmacahTWC82; path=/
+    - PHPSESSID=H0l%2CShbDS1UxoxdN9GQoE0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 22:09:37 GMT
+recorded_at: Sat, 11 Aug 2018 10:56:19 GMT
