--- a/www.nass.gov.ng/2e47dd353b090ddc4c77670008278e5d53d86165.yml
+++ b/www.nass.gov.ng/2e47dd353b090ddc4c77670008278e5d53d86165.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 22:13:02 GMT
+    - Sat, 11 Aug 2018 10:59:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B2VvQgc9Ah5FhNzO-D0q%2C0; path=/
+    - PHPSESSID=4HkzoILF-mz-anp-vzXfd3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 22:13:02 GMT
+recorded_at: Sat, 11 Aug 2018 10:59:33 GMT
