--- a/www.nass.gov.ng/921aafe27ac299039ffa5b9ccf02ac2feae8a33d.yml
+++ b/www.nass.gov.ng/921aafe27ac299039ffa5b9ccf02ac2feae8a33d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 22:35:15 GMT
+    - Sat, 11 Aug 2018 11:21:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ym%2CcoQncUMYbDOyUZnb%2C20; path=/
+    - PHPSESSID=ZS%2ClUHG%2CAkm6U83dCxF5%2C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 22:35:16 GMT
+recorded_at: Sat, 11 Aug 2018 11:21:40 GMT
