--- a/www.nass.gov.ng/24fe4352b8f03c45f80d2c1d82456f2fdf8a9b8e.yml
+++ b/www.nass.gov.ng/24fe4352b8f03c45f80d2c1d82456f2fdf8a9b8e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 22:39:35 GMT
+    - Sat, 11 Aug 2018 11:25:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=78nXyTXSSQ0HDtH4R-w%2CM3; path=/
+    - PHPSESSID=yqpHfd637lu2D0scKsP2W3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 22:39:35 GMT
+recorded_at: Sat, 11 Aug 2018 11:25:49 GMT
