--- a/www.nass.gov.ng/4e4db7aedb76fd1aae949e0a6047cb41d8823efb.yml
+++ b/www.nass.gov.ng/4e4db7aedb76fd1aae949e0a6047cb41d8823efb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 22:44:35 GMT
+    - Sat, 11 Aug 2018 11:32:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IsNPfT6hSKmb8GD55FlMK3; path=/
+    - PHPSESSID=FrOp%2CbRvuldlJdgmuiy2n2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 22:44:35 GMT
+recorded_at: Sat, 11 Aug 2018 11:32:20 GMT
