--- a/www.nass.gov.ng/a64a2d5247d7335a5563d3cab1d9811433f9ce1a.yml
+++ b/www.nass.gov.ng/a64a2d5247d7335a5563d3cab1d9811433f9ce1a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 22:48:27 GMT
+    - Sat, 11 Aug 2018 11:36:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Wsh3B69S%2CrrUKxpbMDnQd1; path=/
+    - PHPSESSID=o3LB7XPtWbIeW6F-owXCF0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 22:48:27 GMT
+recorded_at: Sat, 11 Aug 2018 11:36:22 GMT
