--- a/www.nass.gov.ng/f685864ac60c218e6ed272d8183ec696f317182e.yml
+++ b/www.nass.gov.ng/f685864ac60c218e6ed272d8183ec696f317182e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 22:55:10 GMT
+    - Sat, 11 Aug 2018 11:42:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BorGY58fVIbwpB4a8JneP0; path=/
+    - PHPSESSID=4txEmUfDUyx2xWet%2CPM230; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 22:55:10 GMT
+recorded_at: Sat, 11 Aug 2018 11:42:35 GMT
