--- a/www.nass.gov.ng/d23cb74ea7813ca33774660c74e8542d8e6048ab.yml
+++ b/www.nass.gov.ng/d23cb74ea7813ca33774660c74e8542d8e6048ab.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:03:57 GMT
+    - Sat, 11 Aug 2018 11:51:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uHbMZ0ROfXxgwpZK5WGJC1; path=/
+    - PHPSESSID=M-tWl5q%2CDI6z9TXcj0uNG0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:03:57 GMT
+recorded_at: Sat, 11 Aug 2018 11:51:03 GMT
