--- a/www.nass.gov.ng/93d01e0f504039c20978c14542e63b39539a5ce7.yml
+++ b/www.nass.gov.ng/93d01e0f504039c20978c14542e63b39539a5ce7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:12:27 GMT
+    - Sat, 11 Aug 2018 11:59:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rwRV30mX7Cbo0klcqJ1PB1; path=/
+    - PHPSESSID=i5FCCaygVqv4uy%2CSaKI0C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:12:27 GMT
+recorded_at: Sat, 11 Aug 2018 11:59:40 GMT
