--- a/www.nass.gov.ng/f96c9591c33ea575579b2cb26aa956b37e2b6bb3.yml
+++ b/www.nass.gov.ng/f96c9591c33ea575579b2cb26aa956b37e2b6bb3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:14:57 GMT
+    - Sat, 11 Aug 2018 12:02:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=839eWERr1jFcT75BuBV8i0; path=/
+    - PHPSESSID=-of6xgN2VUugwV1%2CMEGIo1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:14:57 GMT
+recorded_at: Sat, 11 Aug 2018 12:02:34 GMT
