--- a/www.nass.gov.ng/634381fa0435d47aa50c1fd3c755ace19d7c37ae.yml
+++ b/www.nass.gov.ng/634381fa0435d47aa50c1fd3c755ace19d7c37ae.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:25:30 GMT
+    - Sat, 11 Aug 2018 12:15:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Rd6nONPq67axM8MQn%2C8os1; path=/
+    - PHPSESSID=fw1B07ksCEtNHctwG7Oki0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:25:30 GMT
+recorded_at: Sat, 11 Aug 2018 12:15:34 GMT
