--- a/www.nass.gov.ng/64ffadf45db70b458eedc20c9270f439c23aec1c.yml
+++ b/www.nass.gov.ng/64ffadf45db70b458eedc20c9270f439c23aec1c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:28:00 GMT
+    - Sat, 11 Aug 2018 12:18:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KwjdqYNnGX2wH8a%2C56El43; path=/
+    - PHPSESSID=D6ERVVupVCh6AjR5%2Cs4692; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:28:00 GMT
+recorded_at: Sat, 11 Aug 2018 12:18:44 GMT
