--- a/www.nass.gov.ng/d50c45832c2d21e004a2f5ecf8edaac5f66fb825.yml
+++ b/www.nass.gov.ng/d50c45832c2d21e004a2f5ecf8edaac5f66fb825.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:28:46 GMT
+    - Sat, 11 Aug 2018 12:19:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9ACadYb2Wno0NzCabiK%2C%2C0; path=/
+    - PHPSESSID=y%2CqVf-4fGkWRX4xd72rtG0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:28:46 GMT
+recorded_at: Sat, 11 Aug 2018 12:19:53 GMT
