--- a/www.nass.gov.ng/dd47063596feff410eee79a2daec741bc0677f3a.yml
+++ b/www.nass.gov.ng/dd47063596feff410eee79a2daec741bc0677f3a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:41:54 GMT
+    - Sat, 11 Aug 2018 12:32:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HoXKxTp6FEWeYRHr8ep9q0; path=/
+    - PHPSESSID=hkZ%2C2s0Yy7QRpwoCe8mJq1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:41:54 GMT
+recorded_at: Sat, 11 Aug 2018 12:32:30 GMT
