--- a/www.nass.gov.ng/a77e72164112d0152b3ae65953ba9e10b1ddfe83.yml
+++ b/www.nass.gov.ng/a77e72164112d0152b3ae65953ba9e10b1ddfe83.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:45:05 GMT
+    - Sat, 11 Aug 2018 12:35:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=knEIzTJk6P00Uum3AWdn32; path=/
+    - PHPSESSID=yidEBlwSB%2CFSqa26OF5df3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:45:05 GMT
+recorded_at: Sat, 11 Aug 2018 12:35:55 GMT
