--- a/www.nass.gov.ng/e599b409eaf8300338126082ab2cd44387d77364.yml
+++ b/www.nass.gov.ng/e599b409eaf8300338126082ab2cd44387d77364.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:50:07 GMT
+    - Sat, 11 Aug 2018 12:42:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BY01ZfdD%2C%2Cq3RXq6uiYFP3; path=/
+    - PHPSESSID=b2YMaqBmGHnK8JFhViYY30; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:50:07 GMT
+recorded_at: Sat, 11 Aug 2018 12:42:06 GMT
