200 OK https://www.nass.gov.ng/mp/profile/588

--- a/www.nass.gov.ng/f0abda3d5fbf7e2b60ec2a1ad53b2d379647e123.yml
+++ b/www.nass.gov.ng/f0abda3d5fbf7e2b60ec2a1ad53b2d379647e123.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:51:38 GMT
+    - Sat, 11 Aug 2018 12:44:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q1zc9O1%2C0tVT%2CEn1wtDhe1; path=/
+    - PHPSESSID=pDP52yBdUnjSfsAioRtej2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:51:38 GMT
+recorded_at: Sat, 11 Aug 2018 12:44:10 GMT
