--- a/www.nass.gov.ng/8bd431c895319c103095b1653bd775f10ddc139e.yml
+++ b/www.nass.gov.ng/8bd431c895319c103095b1653bd775f10ddc139e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:54:02 GMT
+    - Sat, 11 Aug 2018 12:47:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xonCPr2fROQi1BMBpleXJ1; path=/
+    - PHPSESSID=bN9Jxg%2CTbnZLPXbSXCzWc2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:54:03 GMT
+recorded_at: Sat, 11 Aug 2018 12:47:35 GMT
