--- a/www.nass.gov.ng/d2af98f869de32b131eb2c94035ebd4014fff26c.yml
+++ b/www.nass.gov.ng/d2af98f869de32b131eb2c94035ebd4014fff26c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:55:00 GMT
+    - Sat, 11 Aug 2018 12:48:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=snhLZRbnzbtYYtyPsJrh02; path=/
+    - PHPSESSID=aH-fe4NDTE%2CeZo64aoBxL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:55:00 GMT
+recorded_at: Sat, 11 Aug 2018 12:48:43 GMT
