--- a/www.nass.gov.ng/52c169277cebdf8cd16928ac4d05c2088c80a367.yml
+++ b/www.nass.gov.ng/52c169277cebdf8cd16928ac4d05c2088c80a367.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 23:58:49 GMT
+    - Sat, 11 Aug 2018 12:54:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6T5ryd-QxekVBdKSDGkQb0; path=/
+    - PHPSESSID=jN-8DZCpH2q0%2Ciw9wh8ax2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 23:58:49 GMT
+recorded_at: Sat, 11 Aug 2018 12:54:18 GMT
