--- a/www.nass.gov.ng/5ab6784edea204b8dc8d434ed21b88e6a627c38b.yml
+++ b/www.nass.gov.ng/5ab6784edea204b8dc8d434ed21b88e6a627c38b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 00:07:51 GMT
+    - Sat, 11 Aug 2018 13:06:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WqVOsI%2CutCCSK%2CFQpDGOB2; path=/
+    - PHPSESSID=3zX-CT4sRgA9j8rhESFsQ3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 00:07:52 GMT
+recorded_at: Sat, 11 Aug 2018 13:06:43 GMT
