--- a/www.nass.gov.ng/6d28bd6854ab5ad64490a1e0d9dfa55e96cdee6e.yml
+++ b/www.nass.gov.ng/6d28bd6854ab5ad64490a1e0d9dfa55e96cdee6e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 00:27:22 GMT
+    - Sat, 11 Aug 2018 13:25:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0U1%2C8iRg-%2CfZJrrlD16t90; path=/
+    - PHPSESSID=ICzLyMOR1SKOp%2CzDi7zAx3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 00:27:22 GMT
+recorded_at: Sat, 11 Aug 2018 13:25:53 GMT
