--- a/www.nass.gov.ng/93b6c65363f8309a306a5e422bda9d70074a53a1.yml
+++ b/www.nass.gov.ng/93b6c65363f8309a306a5e422bda9d70074a53a1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 00:30:30 GMT
+    - Sat, 11 Aug 2018 13:28:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=t9pwhTHVhPm4eTDUShUa91; path=/
+    - PHPSESSID=rueaXAc%2C0abEwAFjbYpD30; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 00:30:30 GMT
+recorded_at: Sat, 11 Aug 2018 13:28:43 GMT
