200 OK https://www.nass.gov.ng/mp/profile/584

--- a/www.nass.gov.ng/4f83e837dcd4e10198e87466f43ec4f226d6561f.yml
+++ b/www.nass.gov.ng/4f83e837dcd4e10198e87466f43ec4f226d6561f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 02:18:50 GMT
+    - Sat, 11 Aug 2018 15:24:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UnousY9W%2CmlEDI7fP4%2CFG3; path=/
+    - PHPSESSID=SzHm%2CphorBeByAaps6GS82; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 02:18:50 GMT
+recorded_at: Sat, 11 Aug 2018 15:24:28 GMT
