200 OK https://www.nass.gov.ng/mp/profile/867

--- a/www.nass.gov.ng/3cd878455db840490d5e03bc02f3b42405ada873.yml
+++ b/www.nass.gov.ng/3cd878455db840490d5e03bc02f3b42405ada873.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 02:42:38 GMT
+    - Sat, 11 Aug 2018 15:51:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5vg8gLT%2CAHpz0XCZvT2As1; path=/
+    - PHPSESSID=P33Wk93T2Be8qI-bNvtCG3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 02:42:39 GMT
+recorded_at: Sat, 11 Aug 2018 15:51:06 GMT
