200 OK https://www.nass.gov.ng/search/mps/?search=a

--- a/www.nass.gov.ng/b710172416002a833fe14b217d8a02f83402c70b.yml
+++ b/www.nass.gov.ng/b710172416002a833fe14b217d8a02f83402c70b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 08:39:53 GMT
+    - Sun, 12 Aug 2018 04:55:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TozxG%2CDPtdnIGJY2Ems4n3; path=/
+    - PHPSESSID=Du8dd8oZ52gRXt5-DuJyD2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 11 Aug 2018 08:39:54 GMT
+recorded_at: Sun, 12 Aug 2018 04:55:33 GMT
