200 OK https://www.nass.gov.ng/mp/profile/771

--- a/www.nass.gov.ng/ee402009d629856e3b4e682d13ba7f4ddbee4016.yml
+++ b/www.nass.gov.ng/ee402009d629856e3b4e682d13ba7f4ddbee4016.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 08:49:21 GMT
+    - Sun, 12 Aug 2018 05:05:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wUceav%2CxXvVftHwtDybYS0; path=/
+    - PHPSESSID=YLlP1s48CGsSF2Rxvocj92; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 08:49:21 GMT
+recorded_at: Sun, 12 Aug 2018 05:05:38 GMT
