200 OK https://www.nass.gov.ng/mp/profile/725

--- a/www.nass.gov.ng/aecee86a3c413ceff3acae032b00557a1daebe2b.yml
+++ b/www.nass.gov.ng/aecee86a3c413ceff3acae032b00557a1daebe2b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 12:03:35 GMT
+    - Sun, 12 Aug 2018 08:13:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0JGEDi-uYyRqCnO2k41Ir1; path=/
+    - PHPSESSID=nON24qMrY%2CXnM%2C9-mOL%2Ce1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 12:03:36 GMT
+recorded_at: Sun, 12 Aug 2018 08:13:35 GMT
