200 OK https://www.nass.gov.ng/mp/profile/742

--- a/www.nass.gov.ng/2b2a82aa748928666c604ef6addeff49e48971db.yml
+++ b/www.nass.gov.ng/2b2a82aa748928666c604ef6addeff49e48971db.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 13:45:14 GMT
+    - Sun, 12 Aug 2018 09:44:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hFzDkD64-iv2oXye%2CxgKg0; path=/
+    - PHPSESSID=VnRG7aErs3cRBH2l4WMGv1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 13:45:15 GMT
+recorded_at: Sun, 12 Aug 2018 09:44:10 GMT
