200 OK https://www.nass.gov.ng/mp/profile/682

--- a/www.nass.gov.ng/1890bdc512eb7cd7a8e625b99ef9fe7e496575cd.yml
+++ b/www.nass.gov.ng/1890bdc512eb7cd7a8e625b99ef9fe7e496575cd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 14:07:12 GMT
+    - Sun, 12 Aug 2018 10:08:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=40q%2CEw0qYtNpecOyqNve%2C1; path=/
+    - PHPSESSID=vjA%2C6RXRZsZo3G6FdhES-3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 14:07:13 GMT
+recorded_at: Sun, 12 Aug 2018 10:08:06 GMT
