200 OK https://www.nass.gov.ng/mp/profile/582

--- a/www.nass.gov.ng/558d2e3c7e1cbf2b27608d872fbc23e30f7fce48.yml
+++ b/www.nass.gov.ng/558d2e3c7e1cbf2b27608d872fbc23e30f7fce48.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 16:24:49 GMT
+    - Sun, 12 Aug 2018 12:23:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LxdKqNKo0Otwi%2Ca2JDef40; path=/
+    - PHPSESSID=ySYIK01JTDU93XpU-e8VA2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 16:24:49 GMT
+recorded_at: Sun, 12 Aug 2018 12:23:29 GMT
