200 OK https://www.nass.gov.ng/mp/profile/694

--- a/www.nass.gov.ng/d9de7f13b6b7131198bc17efe614419c34b89a9e.yml
+++ b/www.nass.gov.ng/d9de7f13b6b7131198bc17efe614419c34b89a9e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 07:33:14 GMT
+    - Mon, 13 Aug 2018 20:49:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2QZ7%2CFWk7n1S0I7lfHw3l0; path=/
+    - PHPSESSID=BzoVenuQ8DZWlhAoRjTWb2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 07:33:15 GMT
+recorded_at: Mon, 13 Aug 2018 20:49:36 GMT
