200 OK https://www.nass.gov.ng/mp/profile/774

--- a/www.nass.gov.ng/f37e6e285be5397f198bf2c47da62e347217ef90.yml
+++ b/www.nass.gov.ng/f37e6e285be5397f198bf2c47da62e347217ef90.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 08:39:24 GMT
+    - Mon, 13 Aug 2018 22:03:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lLLj163Bi%2CiNuvDVByh9Z2; path=/
+    - PHPSESSID=I4U-Ihtw4S9rV%2Cgow6-kp1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 08:39:24 GMT
+recorded_at: Mon, 13 Aug 2018 22:03:36 GMT
