200 OK https://www.nass.gov.ng/mp/profile/588

--- a/www.nass.gov.ng/f0abda3d5fbf7e2b60ec2a1ad53b2d379647e123.yml
+++ b/www.nass.gov.ng/f0abda3d5fbf7e2b60ec2a1ad53b2d379647e123.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 08:50:05 GMT
+    - Mon, 13 Aug 2018 22:12:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NyrWo5slYkqav%2CzmgzO8q0; path=/
+    - PHPSESSID=-UtgVOf64V032gt3CCwGX3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 08:50:05 GMT
+recorded_at: Mon, 13 Aug 2018 22:12:53 GMT
