200 OK https://www.nass.gov.ng/mp/profile/595

--- a/www.nass.gov.ng/b23d32c1d9e36ce93bf213777077c60913aef7fa.yml
+++ b/www.nass.gov.ng/b23d32c1d9e36ce93bf213777077c60913aef7fa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 08:55:21 GMT
+    - Mon, 13 Aug 2018 22:20:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FUV%2CRt09YBGfg2gLwjWFx1; path=/
+    - PHPSESSID=gBe2DYpQ1v0srF1G3jBEZ0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 08:55:21 GMT
+recorded_at: Mon, 13 Aug 2018 22:20:10 GMT
