200 OK https://www.nass.gov.ng/mp/profile/794

--- a/www.nass.gov.ng/a8f02fbf5604200ff2e73b363b6e202d109c2bc6.yml
+++ b/www.nass.gov.ng/a8f02fbf5604200ff2e73b363b6e202d109c2bc6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 09:06:20 GMT
+    - Mon, 13 Aug 2018 22:32:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2W0c5oTIH1v8Bw4kv1EcA1; path=/
+    - PHPSESSID=%2CjaGPvdmd8oVn9dC-IlnB3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 09:06:20 GMT
+recorded_at: Mon, 13 Aug 2018 22:32:55 GMT
