200 OK https://www.nass.gov.ng/mp/profile/570

--- a/www.nass.gov.ng/09b049d12a40524adf229f1ea50f2972fa03bfc8.yml
+++ b/www.nass.gov.ng/09b049d12a40524adf229f1ea50f2972fa03bfc8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 09:17:41 GMT
+    - Mon, 13 Aug 2018 22:44:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zVWuDGd%2CV7HhUknKYScJ-0; path=/
+    - PHPSESSID=QV6eGT9cW6L5bYn0s-R7s1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 09:17:42 GMT
+recorded_at: Mon, 13 Aug 2018 22:44:33 GMT
