200 OK https://www.nass.gov.ng/mp/profile/618

--- a/www.nass.gov.ng/8d0749d375753b7013eac510f1f1483775b1ce3a.yml
+++ b/www.nass.gov.ng/8d0749d375753b7013eac510f1f1483775b1ce3a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 10:23:13 GMT
+    - Mon, 13 Aug 2018 23:46:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=st81M%2C8rRUv0cwb5RzunV0; path=/
+    - PHPSESSID=2AlB6PrrARoXn%2C-h7pfTl1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 10:23:13 GMT
+recorded_at: Mon, 13 Aug 2018 23:46:53 GMT
