200 OK https://www.nass.gov.ng/mp/profile/879

--- a/www.nass.gov.ng/dab307f70e75dd9e5e8c694ddf7528cdfafa9c76.yml
+++ b/www.nass.gov.ng/dab307f70e75dd9e5e8c694ddf7528cdfafa9c76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 18:33:42 GMT
+    - Wed, 15 Aug 2018 13:39:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Egb0iKJzC%2CD8vftbHFUTl0; path=/
+    - PHPSESSID=4vWyYJB9imLG8QsfKZckD2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 18:33:43 GMT
+recorded_at: Wed, 15 Aug 2018 13:39:43 GMT
