200 OK https://www.nass.gov.ng/mp/profile/363

--- a/www.nass.gov.ng/22cd573955f2e1ccf15e903e75894c3edc65ed92.yml
+++ b/www.nass.gov.ng/22cd573955f2e1ccf15e903e75894c3edc65ed92.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:12:05 GMT
+    - Wed, 15 Aug 2018 14:18:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Vcu6CVXXCWPC5yR%2CaN0d32; path=/
+    - PHPSESSID=4RsLqRrY-wz7lB4Rt4FX72; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:12:05 GMT
+recorded_at: Wed, 15 Aug 2018 14:18:49 GMT
