200 OK https://www.nass.gov.ng/mp/profile/613

--- a/www.nass.gov.ng/f681dbd6c1e834b6ae370b2fe9aecfedc795aae3.yml
+++ b/www.nass.gov.ng/f681dbd6c1e834b6ae370b2fe9aecfedc795aae3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:56:55 GMT
+    - Wed, 15 Aug 2018 15:02:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Zdsx9d7gaENmG%2C3Hgtwe40; path=/
+    - PHPSESSID=En3uiZo0Ja99i9DiQGGfS3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:56:56 GMT
+recorded_at: Wed, 15 Aug 2018 15:02:17 GMT
