200 OK https://www.nass.gov.ng/mp/profile/899

--- a/www.nass.gov.ng/ec08ea5442077836f0eaa10dce0b9ef3b8daee61.yml
+++ b/www.nass.gov.ng/ec08ea5442077836f0eaa10dce0b9ef3b8daee61.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:00:46 GMT
+    - Wed, 15 Aug 2018 16:58:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=obYahV%2CX5kLYOpfJpfYHS2; path=/
+    - PHPSESSID=M2QA6uG0GPems3cM2SHSn2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:00:46 GMT
+recorded_at: Wed, 15 Aug 2018 16:58:50 GMT
