200 OK https://www.nass.gov.ng/mp/profile/959

--- a/www.nass.gov.ng/0a9438c1b66caf84cd1f5b667ebaa9ad99bba3bb.yml
+++ b/www.nass.gov.ng/0a9438c1b66caf84cd1f5b667ebaa9ad99bba3bb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:36:43 GMT
+    - Wed, 15 Aug 2018 17:44:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=O58cmFqCb-QVo%2C4RCl-zt1; path=/
+    - PHPSESSID=Wo18DfuWbtilr7c9DjL660; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:36:43 GMT
+recorded_at: Wed, 15 Aug 2018 17:44:10 GMT
